Add more text and link to NDA

--- a/index.html
+++ b/index.html
@@ -18,22 +18,35 @@
 
   <body>
     <header>
-      <span class=small>A NEW</span>
+      <p><span class=small>A NEW</span>
       <span class=enormous>PUBLICATION</span>
       <span class=small>of the</span>
-      Terms, Reasonable and Standard,
+      Terms, Reaſonable and Standard,
       <span class=small>uſed in the</span>
       <span class=wordmark>Canting Tribe</span>
-      in ſeveral
+      <span class=small>in ſeveral</span>
       <span class=enormous>forms</span>
-      for
+      <span class=small>for</span>
       <em>Entreprenuers, Salesfolk, Lawyers,</em>
       and all other <em>Clans</em>
-      of <em>Businessfolk</em> and <em>Deal-types</em>.
+      of <em>Businessfolk</em> and <em>Deal-Types</em>.</p>
+      <p class=contents>
+        Preſently compriſing one handy
+        <a class=form href=https://nda.cantingtribe.com>Nondisclosure AGREEMENT</a>
+        with more to come as <em>Providence</em> and <em>Prudence</em> shall allow.
+      </p>
+      <p class=use>
+        Uſeful for all ſorts of People, (eſpecially Newcomers)
+        to secure their <em>Money</em> and preſerve their <em>Livelihoods</em>,
+        beſides very Dependable and Educating, being
+        in manner of publication New.
+      </p>
+      <p class=byline>
+        By <a href=https://rxnda.com>RxNDA</a><br>
+      </p>
+      <p class=place>
+        OAKLAND
+      </p>
     </header>
-
-    <footer>
-      cantingtribe.com is a service of RxNDA LLC.
-    </footer>
   </body>
 </html>
