Fix alignment problems

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
   <body>
     <header>
-      <p><span class=small>A NEW</span>
-      <span class=enormous>PUBLICATION</span>
-      <span class=small>of the</span>
-      Terms, Reaſonable and Standard,
-      <span class=small>uſed in the</span>
-      <span class=wordmark>Canting Tribe</span>
-      <span class=small>in ſeveral</span>
-      <span class=enormous>forms</span>
-      <span class=small>for</span>
-      <em>Entreprenuers, Salesfolk, Lawyers,</em>
-      and all other <em>Clans</em>
-      of <em>Businessfolk</em> and <em>Deal-Types</em>.</p>
+<p class=plate><span class=small>A NEW</span>
+<span class=enormous>PUBLICATION</span>
+<span class=small>of the</span>
+Terms, Reaſonable and Standard,
+<span class=small>uſed in the</span>
+<span class=wordmark>Canting Tribe</span>
+<span class=small>in ſeveral</span>
+<span class=enormous>forms</span>
+<span class=small>for</span>
+<em>Entreprenuers, Salesfolk, Lawyers,</em>
+and all other <em>Clans</em>
+of <em>Businessfolk</em> and <em>Deal-Types</em>.</p>
       <p class=contents>
         Preſently compriſing one handy
         <a class=form href=https://nda.cantingtribe.com>Nondisclosure AGREEMENT</a>
