--- a/index.html
+++ b/index.html
@@ -1,46 +1,10 @@
 <!doctype html>
 <html lang=en>
   <head>
-    <meta charset=UTF-8>
-
+    <meta http-equiv=refresh content="0; url=https://waypointnda.com/">
     <title>Canting Tribe</title>
-
-    <link href=normalize.css rel=stylesheet>
-    <link href=styles.css rel=stylesheet>
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Canting Tribe">
-    <meta name="twitter:description" content="a bog standard NDA">
-    <meta name="twitter:image" content="https://cantingtribe.com">
-    <meta name="twitter:creator" content="@cantingtribe">
   </head>
-
   <body>
-    <header>
-<p class=plate><span class=small>A NEW</span>
-<span class=enormous>PUBLICATION</span>
-<span class=small>of the</span>
-Terms, Reaſonable and Standard,
-<span class=small>uſed in the</span>
-<span class=wordmark>Canting Tribe</span>
-<span class=small>in ſeveral</span>
-<span class=enormous>forms</span>
-<span class=small>for</span>
-<em>Entreprenuers, Salesfolk, Lawyers,</em>
-and all other <em>Clans</em>
-of <em>Businessfolk</em> and <em>Deal-Types</em>.</p>
-      <p class=contents>
-        Preſently compriſing one handy
-        <a class=form href=https://nda.cantingtribe.com>Nondisclosure AGREEMENT</a>
-        with more to come as <em>Providence</em> and <em>Prudence</em> shall allow.
-      </p>
-      <p class=use>
-        Uſeful for all ſorts of People, (eſpecially Newcomers)
-        to secure their <em>Money</em> and preſerve their <em>Livelihoods</em>,
-        beſides very Dependable and Educating, being
-        in manner of publication New.
-      </p>
-    </header>
+    <p>Redirecting to <a href=https://waypointnda.com>waypointnda.com</a>&hellip;</p>
   </body>
 </html>
